--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
     <section class="write-back">
       <h2 class="write-us">Напишите нам</h2>
       <form class="write-fill-up" action="index.html" method="post">
-          <label>Ваше имя:<input type="text" name="name sername" value="" placeholder="Имя Фамилия"aria-label="Поле для имени и фамилии"></label>
-          <label>Ваш e-mail:<input type="text" name="e-mail" value="" placeholder="email@example.com" aria-label="Поле для email"></label>
-          <label>Текст письма:<textarea name="letter" placeholder="В свободной форме" aria-label="Поле для обращения></textarea></label>
-          <button class="modal-close" type="button">Закрыть</button>
-          <button class="button" type="submit">Отправить</button>
+        <label>Ваше имя:<input type="text" name="name sername" value="" placeholder="Имя Фамилия" aria-label="Поле для имени и фамилии"></label>
+        <label>Ваш e-mail:<input type="text" name="e-mail" value="" placeholder="email@example.com" aria-label="Поле для email"></label>
+        <label>Текст письма:<textarea name="letter" placeholder="В свободной форме" aria-label="Поле для обращения"></textarea></label>
+        <button class="modal-close" type="button" aria-label="Закрыть pop-up">Закрыть</button>
+        <button class="modal-button button" type="submit">Отправить</button>
       </form>
     </section>
     <div class="connection">
