--- a/catalog.html
+++ b/catalog.html
@@ -142,7 +142,7 @@
         <label>Ваше имя:<input type="text" name="name sername" value="" placeholder="Имя Фамилия" aria-label="Поле для имени и фамилии"></label>
         <label>Ваш e-mail:<input type="text" name="e-mail" value="" placeholder="email@example.com" aria-label="Поле для email"></label>
         <label>Текст письма:<textarea name="letter" placeholder="В свободной форме" aria-label="Поле для обращения"></textarea></label>
-        <button class="modal-close" type="button" aria-label="Закрыть pop-up">Закрыть</button>
+        <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
         <button class="modal-button button" type="submit">Отправить</button>
       </form>
     </section>
