Заменил aria-label на class="visually-hidden" в социальных иконках в

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
     </section>
     <div class="connection">
       <div class="footer-social">
-        <a class="social button" href="#" aria-label="Нёрдс во Вконтакте">Вконтакте</a>
-        <a class="social button" href="#" aria-label="Нёрдс в Фейсбуке">Фейсбук</a>
-        <a class="social button" href="#" aria-label="Нёрдс в Инстаграм">Инстаграм</a>
+        <a class="social button" href="#"><span class="visually-hidden">Нёрдс во Вконтакте</span></a>
+        <a class="social button" href="#"><span class="visually-hidden">Нёрдс в Фейсбуке</span></a>
+        <a class="social button" href="#"><span class="visually-hidden">Нёрдс в в Инстаграм</span></a>
       </div>
       <div class="for-friends">
         <p class="friendship"><b>Давайте дружить, это выгодно!</b></p>
