--- a/catalog.html
+++ b/catalog.html
@@ -148,9 +148,9 @@
     </section>
     <div class="connection">
       <div class="footer-social">
-        <a class="social button" href="#">Вконтакте</a>
-        <a class="social button" href="#">Фейсбук</a>
-        <a class="social button" href="#">Инстаграм</a>
+        <a class="social button" href="#"><span class="visually-hidden">Нёрдс во Вконтакте</span></a>
+        <a class="social button" href="#"><span class="visually-hidden">Нёрдс в Фейсбуке</span></a>
+        <a class="social button" href="#"><span class="visually-hidden">Нёрдс в в Инстаграм</span></a>
       </div>
       <div class="for-friends">
         <p class="friendship"><b>Давайте дружить, это выгодно!</b></p>
