Изменил адрес в атрибует action в формах

--- a/catalog.html
+++ b/catalog.html
@@ -27,7 +27,7 @@
     </section>
     <section class="filters">
       <h2 class="visually-hidden">Фильтр товаров</h2>
-      <form class="filter" method="get" action="index.html">
+      <form class="filter" method="get" action="https://echo.htmlacademy">
         <fieldset>
           <legend class="filter-title">Сетка:</legend>
           <ul>
@@ -138,7 +138,7 @@
     <!-- Здесь будет форма обратной связи -->
     <section class="popup">
       <h2 class="popup-title">Напишите нам</h2>
-      <form class="popup-form" action="index.html" method="post">
+      <form class="popup-form" action="https://echo.htmlacademy" method="post">
         <label>Ваше имя:<input type="text" name="name sername" value="" placeholder="Имя Фамилия" aria-label="Поле для имени и фамилии"></label>
         <label>Ваш e-mail:<input type="text" name="e-mail" value="" placeholder="email@example.com" aria-label="Поле для email"></label>
         <label>Текст письма:<textarea name="letter" placeholder="В свободной форме" aria-label="Поле для обращения"></textarea></label>
