Заменил часть тегов div на section в footer в index.html

--- a/index.html
+++ b/index.html
@@ -107,14 +107,15 @@
     </section>
   </main>
   <footer class="main-footer">
-    <div class="location">
+    <section class="location">
+      <h2 class="visually-hidden">Адрес и контакты</h2>
       <div class="contacts">
         <p class="contact-name">Nёrds design studio</p>
         <p class="contact-adress">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <p class="contact-phone"><a href="tel:+78172757575">тел. +7 (817) 275-75-75</a></p>
         <a class="button" href="#">Напишите нам</a>
       </div>
-    </div>
+    </section>
     <!-- Здесь будет форма обратной связи -->
     <section class="popup">
       <h2 class="popup-title">Напишите нам</h2>
@@ -126,11 +127,12 @@
         <button class="modal-button button" type="submit">Отправить</button>
       </form>
     </section>
-    <div class="connection">
+    <section class="social-connection">
+      <h2 class="visually-hidden">Студия в соцсетях</h2>
       <div class="footer-social">
         <a class="social button" href="#"><span class="visually-hidden">Нёрдс во Вконтакте</span></a>
         <a class="social button" href="#"><span class="visually-hidden">Нёрдс в Фейсбуке</span></a>
-        <a class="social button" href="#"><span class="visually-hidden">Нёрдс в в Инстаграм</span></a>
+        <a class="social button" href="#"><span class="visually-hidden">Нёрдс в Инстаграм</span></a>
       </div>
       <div class="for-friends">
         <p class="friendship"><b>Давайте дружить, это выгодно!</b></p>
