--- a/catalog.html
+++ b/catalog.html
@@ -150,7 +150,7 @@
       <div class="footer-social">
         <a class="social button" href="#"><span class="visually-hidden">Нёрдс во Вконтакте</span></a>
         <a class="social button" href="#"><span class="visually-hidden">Нёрдс в Фейсбуке</span></a>
-        <a class="social button" href="#"><span class="visually-hidden">Нёрдс в в Инстаграм</span></a>
+        <a class="social button" href="#"><span class="visually-hidden">Нёрдс в Инстаграм</span></a>
       </div>
       <div class="for-friends">
         <p class="friendship"><b>Давайте дружить, это выгодно!</b></p>
