исправил </div> на </section> в  index.html

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <p class="friendship"><b>Давайте дружить, это выгодно!</b></p>
         <p class="discont">Скидка 10% для друзей из социальных сетей.</p>
       </div>
-    </div>
+    </section>
   </footer>
 </body>
 
