--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
     <section class="popup">
       <h2 class="popup-title">Напишите нам</h2>
       <form class="popup-form" action="https://echo.htmlacademy" method="post">
-        <label>Ваше имя:<input type="text" name="fullname" placeholder="Имя Фамилия" aria-label="Поле для имени и фамилии"></label>
-        <label>Ваш e-mail:<input type="text" name="e-mail" placeholder="email@example.com" aria-label="Поле для email"></label>
-        <label>Текст письма:<textarea name="letter" placeholder="В свободной форме" aria-label="Поле для обращения"></textarea></label>
+        <label class="name">Ваше имя:<input type="text" name="fullname" placeholder="Имя Фамилия" aria-label="Поле для имени и фамилии"></label>
+        <label class="mail">Ваш e-mail:<input type="text" name="e-mail" placeholder="email@example.com" aria-label="Поле для email"></label>
+        <label class="letter">Текст письма:<textarea name="letter" placeholder="В свободной форме" aria-label="Поле для обращения"></textarea></label>
         <button class="modal-button button" type="submit">Отправить</button>
       </form>
       <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
