--- a/catalog.html
+++ b/catalog.html
@@ -127,13 +127,15 @@
     </section>
   </main>
   <footer class="main-footer">
-    <div class="location">
+    <section class="location">
+      <h2 class="visually-hidden">Адрес и контакты</h2>
       <div class="contacts">
         <p class="contact-name">Nёrds design studio</p>
         <p class="contact-adress">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <p class="contact-phone"><a href="tel:+78172757575">тел. +7 (817) 275-75-75</a></p>
         <a class="button" href="#">Напишите нам</a>
       </div>
+    </section>
     </div>
     <!-- Здесь будет форма обратной связи -->
     <section class="popup">
@@ -146,7 +148,8 @@
       </form>
       <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
     </section>
-    <div class="connection">
+    <section class="social-connection">
+      <h2 class="visually-hidden">Студия в соцсетях</h2>
       <div class="footer-social">
         <a class="social button" href="#"><span class="visually-hidden">Нёрдс во Вконтакте</span></a>
         <a class="social button" href="#"><span class="visually-hidden">Нёрдс в Фейсбуке</span></a>
@@ -156,7 +159,7 @@
         <p class="friendship"><b>Давайте дружить, это выгодно!</b></p>
         <p class="discont">Скидка 10% для друзей из социальных сетей.</p>
       </div>
-    </div>
+    </section>
   </footer>
 </body>
 
