Добавил стили к блоку section class="services" и добавил <p> class="service-item-slogan" в блоке class="service-item"

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       </ul>
       <ul class="order">
         <li class="basket"><a href="order-project.html">Корзина</a></li>
-        <!-- Как я понимаю, здесь должна быть ссылка на страницу заказа товара -->
       </ul>
     </nav>
   </header>
@@ -50,19 +49,19 @@
         <li class="service-item">
           <img src="img/service-item/service-item-1.jpg" alt="Монитор с сайтом" width="300" height="146">
           <p class="service-item-title">Веб-сайты</p>
-          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+          <p class="service-item-slogan">Покорите топ-10 приложений в AppStore и Google Play</p>
           <a class="order-button" href="order-project.html">Заказать</a>
         </li>
         <li class="service-item">
           <img src="img/service-item/service-item-2.jpg" alt="Смартфоны с приложением" width="300" height="146">
           <p class="service-item-title">Приложения</p>
-          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <p class="service-item-slogan">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a class="order-button" href="order-project.html">Заказать</a>
         </li>
         <li class="service-item">
           <img src="img/service-item/service-item-3.jpg" alt="Презентационная доска" width="300" height="146">
           <p class="service-item-title">Презентации</p>
-          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+          <p class="service-item-slogan">Вы даже не подозреваете, насколько вы изумительны!</p>
           <a class="order-button" href="order-project.html">Заказать</a>
         </li>
       </ul>
