--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
     <section class="description-company">
       <h3 class="visually-hidden">Наши возможности и достижения</h3>
       <div class="principle-company">
-        <p class="principle-slogan"><b>Мы маленькая, но гордая дизайн-студия из Краснодара.</b></p>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
-          превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <p class="principle-title"><b>Мы маленькая, но гордая дизайн-студия из Краснодара.</b></p>
+        <p class="principle-explain">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
       </div>
       <div class="ability-company">
         <h3 class="ability-title">Выполняем заказы на разработку:</h3>
