стилизовал контакты и изменил класс для кнопки "напишите нам"

--- a/catalog.html
+++ b/catalog.html
@@ -134,7 +134,7 @@
       <h2 class="visually-hidden">Адрес и контакты</h2>
       <div class="contacts">
         <p class="contact-name">Nёrds design studio</p>
-        <p class="contact-adress">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <p class="contact-address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <p class="contact-phone"><a href="tel:+78172757575">тел. +7 (817) 275-75-75</a></p>
         <a class="button" href="#">Напишите нам</a>
       </div>
