Поправил написание класса social-button

--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
     <section class="social-connection">
       <h2 class="visually-hidden">Студия в соцсетях</h2>
       <div class="footer-social">
-        <a class="social button" href="#"><span class="visually-hidden">Нёрдс во Вконтакте</span></a>
-        <a class="social button" href="#"><span class="visually-hidden">Нёрдс в Фейсбуке</span></a>
-        <a class="social button" href="#"><span class="visually-hidden">Нёрдс в Инстаграм</span></a>
+        <a class="social-button" href="#"><span class="visually-hidden">Нёрдс во Вконтакте</span></a>
+        <a class="social-button" href="#"><span class="visually-hidden">Нёрдс в Фейсбуке</span></a>
+        <a class="social-button" href="#"><span class="visually-hidden">Нёрдс в Инстаграм</span></a>
       </div>
       <div class="for-friends">
         <p class="friendship"><b>Давайте дружить, это выгодно!</b></p>
