начал стилизовать социконки (состояния), стилизовал абзацы в class="for-friends"

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <a class="social-button" href="#"><span class="visually-hidden">Нёрдс в Инстаграм</span></a>
       </div>
       <div class="for-friends">
-        <p class="friendship"><b>Давайте дружить, это выгодно!</b></p>
+        <p class="friendship">Давайте дружить, это выгодно!</p>
         <p class="discont">Скидка 10% для друзей из социальных сетей.</p>
       </div>
     </section>
