стилизова заг. страницы каталога. начал стилизовать фильтр

--- a/catalog.html
+++ b/catalog.html
@@ -65,7 +65,7 @@
             </li>
           </ul>
         </fieldset>
-        <button class="filter-button button" type="submit">Отправить</button>
+        <button class="filter-button button" type="submit">Показать</button>
       </form>
       <!-- Здесь будет форма -->
     </section>
