--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <a class="connect-button" href="#">Напишите нам</a>
       </div>
     </section>
-    <!-- Здесь будет форма обратной связи -->
+    <!-- Здесь форма обратной связи -->
     <section class="popup">
       <h2 class="popup-title">Напишите нам</h2>
       <form class="popup-form" action="https://echo.htmlacademy" method="post">
