добавил в фильтре к label класс и состояния элементов фильтра

--- a/catalog.html
+++ b/catalog.html
@@ -35,13 +35,13 @@
           <legend class="filter-title">Сетка:</legend>
           <ul>
             <li class="filter-option">
-              <label><input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="adaptive" checked>Адаптивная</label>
+              <label class="filter-cover"><input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="adaptive" checked>Адаптивная</label>
             </li>
             <li class="filter-option">
-              <label><input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="static">Фиксированная</label>
+              <label class="filter-cover"><input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="static">Фиксированная</label>
             </li>
             <li class="filter-option">
-              <label><input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="straching">Резиновая</label>
+              <label class="filter-cover"><input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="straching">Резиновая</label>
             </li>
           </ul>
         </fieldset>
@@ -49,19 +49,19 @@
           <legend class="filter-title">Особености:</legend>
           <ul>
             <li class="filter-option">
-              <label><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" checked>Слайдер</label>
+              <label class="filter-cover"><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" checked>Слайдер</label>
             </li>
             <li class="filter-option">
-              <label><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="feature-block">Блок преимуществ</label>
+              <label class="filter-cover"><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="feature-block">Блок преимуществ</label>
             </li>
             <li class="filter-option">
-              <label><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="news" checked>Новости</label>
+              <label class="filter-cover"><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="news" checked>Новости</label>
             </li>
             <li class="filter-option">
-              <label><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="galary">Галерея</label>
+              <label class="filter-cover"><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="galary">Галерея</label>
             </li>
             <li class="filter-option">
-              <label><input class="filter-input filter-input-checkbox" type="checkbox" name="kart">Корзина</label>
+              <label class="filter-cover"><input class="filter-input filter-input-checkbox" type="checkbox" name="kart">Корзина</label>
             </li>
           </ul>
         </fieldset>
