прописал дополнительный класс для кнопки с ценой для удобства стилизации и стилизовал цену

--- a/catalog.html
+++ b/catalog.html
@@ -77,7 +77,7 @@
           <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">Sedona</a></h3>
             <p>Информационный сайт для туристов</p>
-            <a class="button" href="order-project.html">9900 руб.</a>
+            <a class="button button-price" href="order-project.html">9900 руб.</a>
           </div>
         </li>
         <li class="catalog-item">
@@ -85,7 +85,7 @@
           <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">Pink App</a></h3>
             <p>Продуктовый лендинг приложения для iOS и Android</p>
-            <a class="button" href="order-project.html">9900 руб.</a>
+            <a class="button button-price" href="order-project.html">9900 руб.</a>
           </div>
         </li>
         <li class="catalog-item">
@@ -93,7 +93,7 @@
           <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">Barbershop</a></h3>
             <p>Сайт салона красоты. Для мужчин, да.</p>
-            <a class="button" href="order-project.html">9900 руб.</a>
+            <a class="button button-price" href="order-project.html">9900 руб.</a>
           </div>
         </li>
         <li class="catalog-item">
@@ -101,7 +101,7 @@
           <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">Mishka</a></h3>
             <p>Интернет-магазин вязаных игрушек</p>
-            <a class="button" href="order-project.html">9900 руб.</a>
+            <a class="button button-price" href="order-project.html">9900 руб.</a>
           </div>
         </li>
         <li class="catalog-item">
@@ -109,7 +109,7 @@
           <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">A Plus</a></h3>
             <p>Лендниг курсов повышения квалификации</p>
-            <a class="button" href="order-project.html">9900 руб.</a>
+            <a class="button button-price" href="order-project.html">9900 руб.</a>
           </div>
         </li>
         <li class="catalog-item">
@@ -117,7 +117,7 @@
           <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">Кваст</a></h3>
             <p>Промо-сайт производителя крафтового кваса</p>
-            <a class="button" href="order-project.html">9900 руб.</a>
+            <a class="button button-price" href="order-project.html">9900 руб.</a>
           </div>
         </li>
       </ul>
