--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
       <div class="features-slide features-slide-1">
         <p class="slide-slogan"><b>Долго, дорого, скрупулезно.</b></p>
         <p class="slide-caption">Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-        <a class="button-info" href="#">Узнать больше</a>
+        <a class="button button-info" href="#">Узнать больше</a>
       </div>
       <div class="features-slide features-slide-2">
         <p class="slide-slogan"><b>Любим математику как никто другой</b></p>
         <p class="slide-caption">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-        <a class="button-info" href="#">Узнать больше</a>
+        <a class="button button-info" href="#">Узнать больше</a>
       </div>
       <div class="features-slide features-slide-3">
         <p class="slide-slogan"><b>Только ночь, только хардкор</b></p>
         <p class="slide-caption">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
-        <a class="button-info" href="#">Узнать больше</a>
+        <a class="button button-info" href="#">Узнать больше</a>
       </div>
     </section>
     <section class="services">
@@ -50,19 +50,19 @@
           <img src="img/service-item/service-item-1.jpg" alt="Монитор с сайтом" width="300" height="146">
           <p class="service-item-title">Веб-сайты</p>
           <p class="service-item-slogan">Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a class="order-button" href="order-project.html">Заказать</a>
+          <a class="button order-button" href="order-project.html">Заказать</a>
         </li>
         <li class="service-item">
           <img src="img/service-item/service-item-2.jpg" alt="Смартфоны с приложением" width="300" height="146">
           <p class="service-item-title">Приложения</p>
           <p class="service-item-slogan">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a class="order-button" href="order-project.html">Заказать</a>
+          <a class="button order-button" href="order-project.html">Заказать</a>
         </li>
         <li class="service-item">
           <img src="img/service-item/service-item-3.jpg" alt="Презентационная доска" width="300" height="146">
           <p class="service-item-title">Презентации</p>
           <p class="service-item-slogan">Вы даже не подозреваете, насколько вы изумительны!</p>
-          <a class="order-button" href="order-project.html">Заказать</a>
+          <a class="button order-button" href="order-project.html">Заказать</a>
         </li>
       </ul>
     </section>
@@ -114,7 +114,7 @@
         <p class="contact-name">Nёrds design studio</p>
         <p class="contact-address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <p class="contact-phone"><a href="tel:+78172757575">тел. +7 (817) 275-75-75</a></p>
-        <a class="connect-button" href="#">Напишите нам</a>
+        <a class="button connect-button" href="#">Напишите нам</a>
       </div>
     </section>
     <!-- Здесь форма обратной связи -->
@@ -131,9 +131,9 @@
     <section class="social-connection">
       <h2 class="visually-hidden">Студия в соцсетях</h2>
       <div class="footer-social">
-        <a class="social-button" href="#"><span class="visually-hidden">Нёрдс во Вконтакте</span></a>
-        <a class="social-button" href="#"><span class="visually-hidden">Нёрдс в Фейсбуке</span></a>
-        <a class="social-button" href="#"><span class="visually-hidden">Нёрдс в Инстаграм</span></a>
+        <a class="button social-button" href="#"><span class="visually-hidden">Нёрдс во Вконтакте</span></a>
+        <a class="button social-button" href="#"><span class="visually-hidden">Нёрдс в Фейсбуке</span></a>
+        <a class="button social-button" href="#"><span class="visually-hidden">Нёрдс в Инстаграм</span></a>
       </div>
       <div class="for-friends">
         <p class="friendship">Давайте дружить, это выгодно!</p>
