разметил section description-company

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       </ul>
     </section>
     <section class="description-company">
+<div class="description-company-wrapper">
       <h3 class="visually-hidden">Наши возможности и достижения</h3>
       <div class="principle-company">
         <p class="principle-title"><b>Мы маленькая, но гордая дизайн-студия из Краснодара.</b></p>
@@ -80,6 +81,7 @@
           <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
       </div>
+    </div>
       <div class="our-progress">
         <img src="img/description-company/nerds-illustration.png" width="360" height="208" alt="Логотип студии Нёрдс">
         <p class="progress-slogan">C 2004 года Любим точность во всем:</p>
