--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
         <li><a href="contacts.html">Контакты</a></li>
       </ul>
       <ul class="order">
-        <li class="basket"><a href="order-project.html">Корзина</a></li>
+        <li class="basket"><a href="order-project.html"><img src="img\icons\icon-cart.svg">Корзина</a></li>
       </ul>
     </nav>
   </header>
