Поправил центровку в навигации и в main, добавил классы к элементам списка партнеров

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <header class="main-header">
+ <div class="container-center">
     <nav class="main-navigation">
       <a class="main-header-logo"><img src="img/header/nerds-logo.svg" width="160" height="65" alt="Логотип студии Нёрдс"></a>
       <ul class="site-navigation">
@@ -23,8 +24,10 @@
         <li class="basket"><a href="order-project.html"><img src="img\icons\icon-cart.svg">Корзина</a></li>
       </ul>
     </nav>
+  </div>
   </header>
   <main class="content">
+<div class="container-center">
     <h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
     <section class="features">
       <div class="features-slide features-slide-1">
@@ -67,7 +70,6 @@
       </ul>
     </section>
     <section class="description-company">
-<div class="description-company-wrapper">
       <h3 class="visually-hidden">Наши возможности и достижения</h3>
       <div class="principle-company">
         <p class="principle-title"><b>Мы маленькая, но гордая дизайн-студия из Краснодара.</b></p>
@@ -81,7 +83,6 @@
           <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
       </div>
-    </div>
       <div class="our-progress">
         <img src="img/description-company/nerds-illustration.png" width="360" height="208" alt="Логотип студии Нёрдс">
         <p class="progress-slogan">C 2004 года Любим точность во всем:</p>
@@ -100,14 +101,15 @@
       </div>
     </section>
     <section class="partners">
-      <h2 class="visually-hidden">Наши партнеры</h2>
-      <ul>
+      <!-- <h2 class="visually-hidden">Наши партнеры</h2> -->
+      <ul class="partners-list">
         <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/partners/logo-html.png" alt="HTML Academy"></a></li>
         <li><a href="#"><img src="img/partners/logo-barber.png" alt="Barbershop Borodiski"></a></li>
         <li><a href="#"><img src="img/partners/logo-pink.png" alt="Pink"></a></li>
         <li><a href="#"><img src="img/partners/logo-mishka.png" alt="Mishka"></a></li>
       </ul>
     </section>
+  </div>
   </main>
   <footer class="main-footer">
     <section class="location">
