--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
     </section>
     <section class="partners">
-      <!-- <h2 class="visually-hidden">Наши партнеры</h2> -->
+      <h2 class="visually-hidden">Наши партнеры</h2>
       <ul class="partners-list">
         <li class="htmlacademy"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/partners/logo-html.png" alt="HTML Academy"></a></li>
         <li class="barber"><a href="#"><img src="img/partners/logo-barber.png" alt="Barbershop Borodiski"></a></li>
