в файл со стилями добавил visually-hidden

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   </div>
   </main>
   <footer class="main-footer">
-    <section class="location">
+    <section class="location container-center">
       <h2 class="visually-hidden">Адрес и контакты</h2>
       <div class="contacts">
         <p class="contact-name">Nёrds design studio</p>
