--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
       <div class="ability-company">
         <h3 class="ability-title">Выполняем заказы на разработку:</h3>
-        <ul class="ability-list">
+        <ul class="ability-list">/*дисп блок*/
           <li>Веб-сайтов любой сложности</li>
           <li>Мобильных приложений для iOS и Android</li>
           <li>Слайдшоу и видео для корпоративных презентаций</li>
@@ -132,12 +132,13 @@
       </form>
       <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
     </section>
-    <section class="social-connection">
+    <section class="social-connection container-center">
       <h2 class="visually-hidden">Студия в соцсетях</h2>
       <div class="footer-social">
-        <a class="button social-button" href="#"><span class="visually-hidden">Нёрдс во Вконтакте</span></a>
-        <a class="button social-button" href="#"><span class="visually-hidden">Нёрдс в Фейсбуке</span></a>
-        <a class="button social-button" href="#"><span class="visually-hidden">Нёрдс в Инстаграм</span></a>
+        <a class="button social-button" href="#"><span class="">Нёрдс во Вконтакте</span></a>
+        <a class="button social-button" href="#"><span class="">Нёрдс в Фейсбуке</span></a>
+        <a class="button social-button" href="#"><span class="">Нёрдс в Инстаграм</span></a>
+        <!-- временно убрал class="visually-hidden" -->
       </div>
       <div class="for-friends">
         <p class="friendship">Давайте дружить, это выгодно!</p>
