сделал видимыми социальные иконки

--- a/index.html
+++ b/index.html
@@ -11,105 +11,105 @@
 
 <body>
   <header class="main-header">
- <div class="container-center">
-    <nav class="main-navigation">
-      <a class="main-header-logo"><img src="img/header/nerds-logo.svg" width="160" height="65" alt="Логотип студии Нёрдс"></a>
-      <ul class="site-navigation">
-        <li><a href="info.html">Студия</a></li>
-        <li><a href="our-clients.html">Клиенты</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-      </ul>
-      <ul class="order">
-        <li class="basket"><a href="order-project.html"><img src="img\icons\icon-cart.svg">Корзина</a></li>
-      </ul>
-    </nav>
-  </div>
+    <div class="container-center">
+      <nav class="main-navigation">
+        <a class="main-header-logo"><img src="img/header/nerds-logo.svg" width="160" height="65" alt="Логотип студии Нёрдс"></a>
+        <ul class="site-navigation">
+          <li><a href="info.html">Студия</a></li>
+          <li><a href="our-clients.html">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+        <ul class="order">
+          <li class="basket"><a href="order-project.html"><img src="img\icons\icon-cart.svg">Корзина</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
   <main class="content">
-<div class="container-center">
-    <h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
-    <section class="features">
-      <div class="features-slide features-slide-1">
-        <p class="slide-slogan"><b>Долго, дорого, скрупулезно.</b></p>
-        <p class="slide-caption">Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-        <a class="button button-info" href="#">Узнать больше</a>
-      </div>
-      <div class="features-slide features-slide-2">
-        <p class="slide-slogan"><b>Любим математику как никто другой</b></p>
-        <p class="slide-caption">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-        <a class="button button-info" href="#">Узнать больше</a>
-      </div>
-      <div class="features-slide features-slide-3">
-        <p class="slide-slogan"><b>Только ночь, только хардкор</b></p>
-        <p class="slide-caption">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
-        <a class="button button-info" href="#">Узнать больше</a>
-      </div>
-    </section>
-    <section class="services">
-      <h2 class="visually-hidden">Услуги</h2>
-      <ul class="service-list">
-        <li class="service-item">
-          <img src="img/service-item/service-item-1.jpg" alt="Монитор с сайтом" width="300" height="146">
-          <p class="service-item-title">Веб-сайты</p>
-          <p class="service-item-slogan">Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a class="button order-button" href="order-project.html">Заказать</a>
-        </li>
-        <li class="service-item">
-          <img src="img/service-item/service-item-2.jpg" alt="Смартфоны с приложением" width="300" height="146">
-          <p class="service-item-title">Приложения</p>
-          <p class="service-item-slogan">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a class="button order-button" href="order-project.html">Заказать</a>
-        </li>
-        <li class="service-item">
-          <img src="img/service-item/service-item-3.jpg" alt="Презентационная доска" width="300" height="146">
-          <p class="service-item-title">Презентации</p>
-          <p class="service-item-slogan">Вы даже не подозреваете, насколько вы изумительны!</p>
-          <a class="button order-button" href="order-project.html">Заказать</a>
-        </li>
-      </ul>
-    </section>
-    <section class="description-company">
-      <h3 class="visually-hidden">Наши возможности и достижения</h3>
-      <div class="principle-company">
-        <p class="principle-title"><b>Мы маленькая, но гордая дизайн-студия из Краснодара.</b></p>
-        <p class="principle-explain">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-      </div>
-      <div class="ability-company">
-        <h3 class="ability-title">Выполняем заказы на разработку:</h3>
-        <ul class="ability-list">/*дисп блок*/
-          <li>Веб-сайтов любой сложности</li>
-          <li>Мобильных приложений для iOS и Android</li>
-          <li>Слайдшоу и видео для корпоративных презентаций</li>
+    <div class="container-center">
+      <h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
+      <section class="features">
+        <div class="features-slide features-slide-1">
+          <p class="slide-slogan"><b>Долго, дорого, скрупулезно.</b></p>
+          <p class="slide-caption">Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+          <a class="button button-info" href="#">Узнать больше</a>
+        </div>
+        <div class="features-slide features-slide-2">
+          <p class="slide-slogan"><b>Любим математику как никто другой</b></p>
+          <p class="slide-caption">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+          <a class="button button-info" href="#">Узнать больше</a>
+        </div>
+        <div class="features-slide features-slide-3">
+          <p class="slide-slogan"><b>Только ночь, только хардкор</b></p>
+          <p class="slide-caption">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
+          <a class="button button-info" href="#">Узнать больше</a>
+        </div>
+      </section>
+      <section class="services">
+        <h2 class="visually-hidden">Услуги</h2>
+        <ul class="service-list">
+          <li class="service-item">
+            <img src="img/service-item/service-item-1.jpg" alt="Монитор с сайтом" width="300" height="146">
+            <p class="service-item-title">Веб-сайты</p>
+            <p class="service-item-slogan">Покорите топ-10 приложений в AppStore и Google Play</p>
+            <a class="button order-button" href="order-project.html">Заказать</a>
+          </li>
+          <li class="service-item">
+            <img src="img/service-item/service-item-2.jpg" alt="Смартфоны с приложением" width="300" height="146">
+            <p class="service-item-title">Приложения</p>
+            <p class="service-item-slogan">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+            <a class="button order-button" href="order-project.html">Заказать</a>
+          </li>
+          <li class="service-item">
+            <img src="img/service-item/service-item-3.jpg" alt="Презентационная доска" width="300" height="146">
+            <p class="service-item-title">Презентации</p>
+            <p class="service-item-slogan">Вы даже не подозреваете, насколько вы изумительны!</p>
+            <a class="button order-button" href="order-project.html">Заказать</a>
+          </li>
         </ul>
-      </div>
-      <div class="our-progress">
-        <img src="img/description-company/nerds-illustration.png" width="360" height="208" alt="Логотип студии Нёрдс">
-        <p class="progress-slogan">C 2004 года Любим точность во всем:</p>
-        <table class="progress-table">
-          <tr class="procent">
-            <td>146%</td>
-            <td>100%</td>
-            <td>50%</td>
-          </tr>
-          <tr class="value">
-            <td>Уровень самоотдачи</td>
-            <td>Соблюдение сроков</td>
-            <td>Минимальная предоплата</td>
-          </tr>
-        </table>
-      </div>
-    </section>
-    <section class="partners">
-      <h2 class="visually-hidden">Наши партнеры</h2>
-      <ul class="partners-list">
-        <li class="htmlacademy"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/partners/logo-html.png" alt="HTML Academy"></a></li>
-        <li class="barber"><a href="#"><img src="img/partners/logo-barber.png" alt="Barbershop Borodiski"></a></li>
-        <li class="pink"><a href="#"><img src="img/partners/logo-pink.png" alt="Pink"></a></li>
-      <li class="mishka"><a href="#"><img src="img/partners/logo-mishka.png" alt="Mishka"></a></li>
-      </ul>
-    </section>
-  </div>
+      </section>
+      <section class="description-company">
+        <h3 class="visually-hidden">Наши возможности и достижения</h3>
+        <div class="principle-company">
+          <p class="principle-title"><b>Мы маленькая, но гордая дизайн-студия из Краснодара.</b></p>
+          <p class="principle-explain">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+        </div>
+        <div class="ability-company">
+          <h3 class="ability-title">Выполняем заказы на разработку:</h3>
+          <ul class="ability-list">/*дисп блок*/
+            <li>Веб-сайтов любой сложности</li>
+            <li>Мобильных приложений для iOS и Android</li>
+            <li>Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
+        </div>
+        <div class="our-progress">
+          <img src="img/description-company/nerds-illustration.png" width="360" height="208" alt="Логотип студии Нёрдс">
+          <p class="progress-slogan">C 2004 года Любим точность во всем:</p>
+          <table class="progress-table">
+            <tr class="procent">
+              <td>146%</td>
+              <td>100%</td>
+              <td>50%</td>
+            </tr>
+            <tr class="value">
+              <td>Уровень самоотдачи</td>
+              <td>Соблюдение сроков</td>
+              <td>Минимальная предоплата</td>
+            </tr>
+          </table>
+        </div>
+      </section>
+      <section class="partners">
+        <h2 class="visually-hidden">Наши партнеры</h2>
+        <ul class="partners-list">
+          <li class="htmlacademy"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/partners/logo-html.png" alt="HTML Academy"></a></li>
+          <li class="barber"><a href="#"><img src="img/partners/logo-barber.png" alt="Barbershop Borodiski"></a></li>
+          <li class="pink"><a href="#"><img src="img/partners/logo-pink.png" alt="Pink"></a></li>
+          <li class="mishka"><a href="#"><img src="img/partners/logo-mishka.png" alt="Mishka"></a></li>
+        </ul>
+      </section>
+    </div>
   </main>
   <footer class="main-footer">
     <section class="location container-center">
@@ -135,10 +135,9 @@
     <section class="social-connection container-center">
       <h2 class="visually-hidden">Студия в соцсетях</h2>
       <div class="footer-social">
-        <a class="button social-button" href="#"><span class="">Нёрдс во Вконтакте</span></a>
-        <a class="button social-button" href="#"><span class="">Нёрдс в Фейсбуке</span></a>
-        <a class="button social-button" href="#"><span class="">Нёрдс в Инстаграм</span></a>
-        <!-- временно убрал class="visually-hidden" -->
+        <a class="button social-button" href="#"><span class="visually-hidden">Нёрдс во Вконтакте</span></a>
+        <a class="button social-button" href="#"><span class="visually-hidden">Нёрдс в Фейсбуке</span></a>
+        <a class="button social-button" href="#"><span class="visually-hidden">Нёрдс в Инстаграм</span></a>
       </div>
       <div class="for-friends">
         <p class="friendship">Давайте дружить, это выгодно!</p>
