сделал центровку страницы каталога

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         </div>
         <div class="ability-company">
           <h3 class="ability-title">Выполняем заказы на разработку:</h3>
-          <ul class="ability-list">/*дисп блок*/
+          <ul class="ability-list">
+            <!-- дисп блок -->
             <li>Веб-сайтов любой сложности</li>
             <li>Мобильных приложений для iOS и Android</li>
             <li>Слайдшоу и видео для корпоративных презентаций</li>
