--- a/catalog.html
+++ b/catalog.html
@@ -11,6 +11,7 @@
 
 <body>
   <header class="main-header">
+    <div class="container-center">
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html"><img src="img/header/nerds-logo.svg" width="160" height="65" alt="Логотип студии Нёрдс"></a>
       <ul class="site-navigation">
@@ -24,7 +25,9 @@
       </ul>
     </nav>
   </header>
+  </div>
   <main class="container">
+    <div class="container-center">
     <section class="head-name">
       <h1 class="page-title">Магазин готовых шаблонов</h1>
     </section>
@@ -128,9 +131,10 @@
         <li><a href="#">Следующая</a></li>
       </ul>
     </section>
+  </div>
   </main>
   <footer class="main-footer">
-    <section class="location">
+    <section class="location container-center">
       <h2 class="visually-hidden">Адрес и контакты</h2>
       <div class="contacts">
         <p class="contact-name">Nёrds design studio</p>
@@ -151,7 +155,7 @@
       </form>
       <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
     </section>
-    <section class="social-connection">
+    <section class="social-connection container-center">
       <h2 class="visually-hidden">Студия в соцсетях</h2>
       <div class="footer-social">
         <a class="button social-button" href="#"><span class="visually-hidden">Нёрдс во Вконтакте</span></a>
