задал свойства заголовку каталога и свойства ширину блоку с фильтром

--- a/catalog.html
+++ b/catalog.html
@@ -31,6 +31,7 @@
     <section class="head-name">
       <h1 class="page-title">Магазин готовых шаблонов</h1>
     </section>
+    <div class="catalog-cover-columns">
     <section class="filters">
       <h2 class="visually-hidden">Фильтр товаров</h2>
       <form class="filter" method="get" action="https://echo.htmlacademy">
@@ -131,6 +132,7 @@
         <li><a href="#">Следующая</a></li>
       </ul>
     </section>
+  </div>
   </div>
   </main>
   <footer class="main-footer">
