убрал justify-content: space-between у site-navigation, добавил классы тегам пунктов меню, прописал им отступы

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <nav class="main-navigation">
         <a class="main-header-logo"><img src="img/header/nerds-logo.svg" width="160" height="65" alt="Логотип студии Нёрдс"></a>
         <ul class="site-navigation">
-          <li><a href="info.html">Студия</a></li>
-          <li><a href="our-clients.html">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
+          <li class="menu-studia"><a href="info.html">Студия</a></li>
+          <li class="menu-clients"><a href="our-clients.html">Клиенты</a></li>
+          <li class="menu-shop"><a href="catalog.html">Магазин</a></li>
+          <li class="menu-contacts"><a href="contacts.html">Контакты</a></li>
         </ul>
         <ul class="order">
           <li class="basket"><a href="order-project.html"><img src="img\icons\icon-cart.svg">Корзина</a></li>
