убрал классы у элементов списка partners-list и расположил их при помощи вложенного селектора с псевдоклассом и margin

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
       <section class="partners">
         <h2 class="visually-hidden">Наши партнеры</h2>
         <ul class="partners-list">
-          <li class="htmlacademy"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/partners/logo-html.png" alt="HTML Academy"></a></li>
-          <li class="barber"><a href="#"><img src="img/partners/logo-barber.png" alt="Barbershop Borodiski"></a></li>
-          <li class="pink"><a href="#"><img src="img/partners/logo-pink.png" alt="Pink"></a></li>
-          <li class="mishka"><a href="#"><img src="img/partners/logo-mishka.png" alt="Mishka"></a></li>
+          <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/partners/logo-html.png" alt="HTML Academy"></a></li>
+          <li><a href="#"><img src="img/partners/logo-barber.png" alt="Barbershop Borodiski"></a></li>
+          <li><a href="#"><img src="img/partners/logo-pink.png" alt="Pink"></a></li>
+          <li><a href="#"><img src="img/partners/logo-mishka.png" alt="Mishka"></a></li>
         </ul>
       </section>
     </div>
