убрал центровщик у блока location и добавил его к contacts

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
     </div>
   </main>
   <footer class="main-footer">
-    <section class="location container-center">
+    <section class="location">
       <h2 class="visually-hidden">Адрес и контакты</h2>
-      <div class="contacts">
+      <div class="contacts container-center">
         <p class="contact-name">Nёrds design studio</p>
         <p class="contact-address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <p class="contact-phone"><a href="tel:+78172757575">тел. +7 (817) 275-75-75</a></p>
