скрыл <img> для дальнейшей стилизации иконки корзины, попробовал стилизовать иконку, но она не появилась

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
           <li class="menu-contacts"><a href="contacts.html">Контакты</a></li>
         </ul>
         <ul class="order">
-          <li class="basket"><a href="order-project.html"><img src="img\icons\icon-cart.svg">Корзина</a></li>
+          <li class="basket"><a href="order-project.html">Корзина</a></li>
+          <!-- <img src="img\icons\icon-cart.svg"> убрал временно от корзины -->
         </ul>
       </nav>
     </div>
