Добавил цвета кнопкам и сркугление углов
Здал общий цвет button, и переопределил для двух кнопок с другим цветом

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             <img src="img/service-item/service-item-2.jpg" alt="Смартфоны с приложением" width="300" height="146">
             <p class="service-item-title">Приложения</p>
             <p class="service-item-slogan">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-            <a class="button order-button" href="order-project.html">Заказать</a>
+            <a class="button order-button order-button-color1" href="order-project.html">Заказать</a>
           </li>
           <li class="service-item">
             <img src="img/service-item/service-item-3.jpg" alt="Презентационная доска" width="300" height="146">
             <p class="service-item-title">Презентации</p>
             <p class="service-item-slogan">Вы даже не подозреваете, насколько вы изумительны!</p>
-            <a class="button order-button" href="order-project.html">Заказать</a>
+            <a class="button order-button order-button-color2" href="order-project.html">Заказать</a>
           </li>
         </ul>
       </section>
